--- a/index.html
+++ b/index.html
@@ -82,27 +82,27 @@
                 </div>
             </div>
             <div class="row">
-                <div class="kolumn">
+                <div class="column">
                     <div class="services-item">
-                        <img src="images/ikon-1.png" alt="Icon 1" class="icons services-item__icon">
+                        <img src="images/icon-1.png" alt="Icon 1" class="icons services-item__icon">
                         <h5 class="heading--five">Fully Editable</h5>
                     </div>
                 </div>
                 <div>
                     <div class="services-item">
-                        <img src="images/ikon-4.png" alt="Icon 2" class="icons services-item__icon">
+                        <img src="images/icon-4.png" alt="Icon 2" class="icons services-item__icon">
                         <h5 class="heading--five">Free Download</h5>
                     </div>
                 </div>
                 <div>
                     <div class="services-item">
-                        <img src="images/ikon-2.png" alt="Icon 3" class="icons services-item__icon">
+                        <img src="images/icon-2.png" alt="Icon 3" class="icons services-item__icon">
                         <h5 class="heading--five">Modern design</h5>
                     </div>
                 </div>
                 <div>
                     <div class="services-item">
-                        <img src="images/ikon-3.png" alt="Icon 4" class="icons services-item__icon">
+                        <img src="images/icon-3.png" alt="Icon 4" class="icons services-item__icon">
                         <h5 class="heading--five">100% Responsive</h5>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="kolumn">
+                <div class="column">
                     <div class="card">
                         <div class="card__head">
                             <h3 class="card__price"><span class="card__price-symbol">$</span>19</h3>
@@ -225,7 +225,7 @@
     </section>
     <section class="info">
         <div class="container">
-            <div class="row kolumn">
+            <div class="row column">
                 <div class="col-4">
                     <div class="col-12 info-box">
                         <div class="info-box__aside">
@@ -297,7 +297,7 @@
     </section>
     <div class="panel">
         <div class="container">
-            <div class="row kolumn">
+            <div class="row column">
                 <div class="col-12">
                     <div class="panel-content">
                         <h1 class="heading--first">
@@ -320,7 +320,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row kolumn col-12">
+            <div class="row column col-12">
                 <div class="col-3">
                     <article class="news-box">
                         <div class="news-box__img">
@@ -445,7 +445,7 @@
 </main>
 <footer class="footer">
     <div class="container">
-        <div class="row kolumn">
+        <div class="row column">
             <div class="col-6">
                 <p class="footer-copy">&copy; 2015 Copyright Mache Template</p>
             </div>
